fix news footer on iphone 7 and below

--- a/client/static/main.scss
+++ b/client/static/main.scss
@@ -41,7 +41,8 @@
   }
 
   .news-footer {
-    height: 12px;
+    font-size: 0.5rem;
+    height: 10px;
   }
 
   /* PROFILE INDEX */
@@ -109,6 +110,7 @@
   }
 
   .news-footer {
+    font-size: 0.6rem;
     height: 13px;
   }
 
@@ -179,6 +181,7 @@
   }
 
   .news-footer {
+    font-size: 0.8rem;
     height: 15px;
   }
 
@@ -258,6 +261,7 @@
   }
 
   .news-footer {
+    font-size: 1rem;
     height: 22px;
   }
 
